00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site-template
  labels:
    app: site-template
