04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-template-ingress
  namespace: site-template
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - site-template.local
      secretName: site-template-tls
  rules:
    - host: site-template.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-template-svc
                port:
                  number: 80
